--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="header header-block">
     <div class="container header__container">
       <a href="#" class="logo header__logo" aria-label="Главная страница сайта SiteAudit">
-        <img src="img/header__logo-block.svg" class="logo-image" alt="Логотип SiteAudit.">
+        <img src="img/header__logo-block.svg" class="logo-image" alt="Логотип SiteAudit." width="162" height="35">
       </a>
       <nav class="navigation header__navigation">
         <button class="header__navigation-btn" type="button">
@@ -84,17 +84,17 @@
           <picture class="hero-img-three">
             <source media="(min-width: 1200px)" srcset="img/rooms-page.jpg">
             <source media="(min-width: 768px)" srcset="img/rooms-page-tablet.jpg">
-            <img class="img-three" src="img/rooms-page-mobile.jpg" alt="Home page.">
+            <img class="img-three" src="img/rooms-page-mobile.jpg" alt="The Rooms page." width="267" height="150">
           </picture>
           <picture class="hero-img-two">
             <source media="(min-width: 1200px)" srcset="img/home-page.jpg">
             <source media="(min-width: 768px)" srcset="img/home-page-tablet.jpg">
-            <img class="img-two" src="img/home-page-mobile.jpg" alt="Home page.">
+            <img class="img-two" src="img/home-page-mobile.jpg" alt="Home page." width="267" height="150">
           </picture>
           <picture class="hero-img-one">
             <source media="(min-width: 1200px)" srcset="img/your-hotel.jpg">
             <source media="(min-width: 768px)" srcset="img/your-hotel-tablet.jpg">
-            <img  class="img-one" src="img/your-hotel-mobile.jpg" alt="Your hotel.">
+            <img  class="img-one" src="img/your-hotel-mobile.jpg" alt="Your hotel." width="267" height="150">
           </picture>
         </div>
 
@@ -110,6 +110,10 @@
           <div class="slideshow">
         <ul class="check__list list-reset">
           <li class="check__item check__item--right">
+            <picture class="check__img">
+              <source media="(min-width: 320px)" srcset="img/navigation.jpg">
+              <img class="img-navigation" src="img/navigation.jpg" alt="Navigation." width="320" height="160">
+            </picture>
             <h3 class="check__subtitle check__subtitle--location subtitle-one">
               Website navigation
             </h3>
@@ -119,6 +123,10 @@
             </p>
           </li>
           <li class="check__item check__item--left">
+            <picture class="check__img">
+              <source media="(min-width: 320px)" srcset="img/ranking.jpg">
+              <img class="img-ranking" src="img/ranking.jpg" alt="The search bar." width="320" height="160">
+            </picture>
             <h3 class="check__subtitle">
               Ranking in search engines
             </h3>
@@ -128,6 +136,10 @@
             </p>
           </li>
           <li class="check__item check__item--center">
+            <picture class="check__img">
+              <source media="(min-width: 320px)" srcset="img/content.jpg">
+              <img class="img-content" src="img/content.jpg" alt="Hotel card." width="320" height="160">
+            </picture>
             <h3 class="check__subtitle check__subtitle--location subtitle-two">
               Content
             </h3>
@@ -137,6 +149,10 @@
             </p>
           </li>
           <li class="check__item check__item--back">
+            <picture class="check__img">
+              <source media="(min-width: 320px)" srcset="img/marketing.jpg">
+              <img class="img-marketing" src="img/marketing.jpg" alt="Special offers." width="320" height="160">
+            </picture>
             <h3 class="check__subtitle check__subtitle--location subtitle-three">
               Marketing and converting features
             </h3>
@@ -164,27 +180,27 @@
     <div class="container footer__container">
       <div class="footer__wrapper">
         <a href="#" class="logo footer__logo" aria-label="Главная страница сайта SiteAudit">
-          <img src="img/footer-logo.svg" class="logo-img" alt="Логотип SiteAudit.">
+          <img src="img/footer-logo.svg" class="logo-img" alt="Логотип SiteAudit." width="162" height="35">
         </a>
         <ul class="footer__social list-reset">
-          <li class="social-item"><a href="#" class="social-link" aria-label="Наша страничка в одноклассниках">
-              <img src="img/facebook.svg" alt="Facebook">
+          <li class="social-item"><a href="#" class="social-link" aria-label="Наша страничка в фейсбук">
+              <img src="img/facebook.svg" alt="Facebook" width="24" height="24">
             </a>
           </li>
-          <li class="social-item"><a href="#" class="social-link" aria-label="Наша страничка в вконтакте">
-              <img src="img/instagram.svg" alt="Instagram">
+          <li class="social-item"><a href="#" class="social-link" aria-label="Наша страничка в инстаграмм">
+              <img src="img/instagram.svg" alt="Instagram" width="24" height="24">
             </a>
           </li>
-          <li class="social-item"><a href="#" class="social-link" aria-label="Наша страничка в вконтакте">
-              <img src="img/in.svg" alt="Linked">
+          <li class="social-item"><a href="#" class="social-link" aria-label="Наша страничка в линкед">
+              <img src="img/in.svg" alt="Linked" width="24" height="24">
             </a>
           </li>
-          <li class="social-item"><a href="#" class="social-link" aria-label="Наша страничка в вконтакте">
-              <img src="img/youtube.svg" alt="Youtube">
+          <li class="social-item"><a href="#" class="social-link" aria-label="Наша страничка в ютуб">
+              <img src="img/youtube.svg" alt="Youtube" width="24" height="24">
             </a>
           </li>
         </ul>
-        <img src="img/payment-systems.svg" alt="Visa" width="117" height="38">
+        <img src="img/payment-systems.svg" alt="Visa." width="117" height="38">
       </div>
     </div>
   </footer>
